Content/css/dockyard.css
/* ... */
.processActionStepsRightArrow {
    padding-left: 15px;
    margin-top: -15px;
}

/* Route Builder */
.designer-header {
    background: transparent;
    width: 100%;
    padding-top:13px;
}

.designer-header-title.page-title {
    padding: 5px 0px 0 15px
}

.sub-panel-header .designer-header-title.page-title {
    padding: 5px 0px 0px 0px
}

.design-header-title-editField {
    display: none;
    font-size: 22px;
    border: 0;
    margin: -3px -5px 0 -5px;
    padding: 0 5px;
    width: 100%;
}

.designer-header-title.design-header-title-editing .design-header-title-editField {
    display: inline-block;
}

.designer-header-title.design-header-title-editing .route-name, .designer-header-title.design-header-title-editing .designer-header-glyphicon {
    display: none;
}

.designer-header-fixed{
    position: fixed;
    margin-top: -25px; 
    border-bottom: 3px solid; 
    border-color: rgb(38, 166, 154);
    z-index: 1020;
    background-color: #EFF3F8;
    width:79%;
    height:64px;
}

.designer-header-glyphicon {
    font-size: 22px;
    line-height: 24px;
    margin-left: 20px;
    cursor: pointer;
}

.sub-plan-container {
    padding-top:50px;
}

.route-name {
    display: inline-block;
    vertical-align: top;
    color: #697882;
    font-weight: 400;
}

.designer-header-status {
    float: right;
    margin-left:30px;
}

.designer-header-statusLabel {
    margin-right: 10px;
    color: #697882;
}

.designer-header-status .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary {
    background-color: #58b8a9;
    color: white;
}

.switch-btn {
    background-color: lightgrey;
    width: 80px;
}

.switch-btn.active {
    background-color: #428bca;
}

.route-builder-container {
    height: 800px;
    position: relative;
    white-space: nowrap;
    width: 100%;
}

.action-arrow-right {
    background-image: url('/Content/img/site/arrow_blue_ic_arrow_forward_48px-512.png');
    background-size: contain;
    display: inline-block;
    height: 50px;
    margin: 84px 10px 0 7px;
    width: 50px;
}

.action-arrow-right-0 {
    background-image: url('/Content/img/site/arrow_blue_gray_ic_arrow_forward_48px-512.png');
    background-size: contain;
    display: inline-block;
    height: 50px;
    width: 50px;
    float: left;
}


.action-arrow-right-1 {
    background-image: url('/Content/img/site/arrow_blue_gray_ic_arrow_forward_48px-512.png');
    background-size: contain;
    display: inline-block;
    height: 50px;
    width: 50px;
    float: left;
}

.action-arrow-right-2 {
    background-image: url('/Content/img/site/arrow_blue_gray_ic_arrow_forward_48px-512.png');
    background-size: contain;
    display: inline-block;
    height: 50px;
    width: 50px;
    float: left;
}

.action-arrow-right-3 {
    background-image: url('/Content/img/site/arrow_blue_gray_ic_arrow_forward_48px-512.png');
    background-size: contain;
    display: inline-block;
    height: 50px;
    width: 50px;
    float: left;
}

.action-arrow-right-5 {
    background-image: url('/Content/img/site/arrow_blue_gray_ic_arrow_forward_48px-512.png');
    background-size: contain;
    display: inline-block;
    height: 50px;
    width: 50px;
    float: left;
}

.action-arrow-right-jumptarget {
    display: block;
    margin-left: 14px;
}

.jump-target-text {
    padding-top: 15px; 
    margin-left: 60px;
}

.transition-seperator {
    border-top: 2px solid #bbb;
}


.action-arrow-bottom {
    background-color: #58B8A9;
    position: absolute;
    width: 16px;
}

.action-arrow-bottom::after {
    content: '';
    border-right: 14px solid transparent;
    border-left: 14px solid transparent;
    border-top: 20px solid #58B8A9;
    display: block;
    bottom: -13px;
    left: -6px;
    position: absolute;
}

.action {
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px 0px, rgba(0, 0, 0, 0.137255) 0px 1px 1px 0px, rgba(0, 0, 0, 0.117647) 0px 2px 1px -1px;
    display: inline-block;
    margin-bottom: 5px;
    vertical-align: top;
    white-space: initial;
}

.action .pane-configure-action {
    min-height: 250px;
    padding: 2%;
    outline: none;
    cursor: default;
}

.action .ap-resize {
    min-height: 380px;
    overflow: hidden;
    overflow: auto;
}

div.action {
    border-radius: 10px !important;
}

@-moz-keyframes updatingFadeIn { 
  from   { opacity:0; }
  to { opacity:0.8; }
}

@-webkit-keyframes updatingFadeIn { 
  from   { opacity:0; }
  to { opacity:0.8; }
}

@keyframes updatingFadeIn { 
  from   { opacity:0; }
  to { opacity:0.8; }
}

@-moz-keyframes actionNameFadeOut { 
  from   { opacity:0; }
  to { opacity:1; }
}

@-webkit-keyframes actionNameFadeOut { 
  from   { opacity:0; }
  to { opacity:1; }
}

@keyframes actionNameFadeOut { 
  from   { opacity:0; }
  to { opacity:1; }
}

.action-name {
    font-size: small;
    right: 5px;
    position: absolute;
    top: 5px;
    text-align:center;
    -moz-animation: actionNameFadeOut 0.5s ease-in;
    -o-animation: actionNameFadeOut 0.5s ease-in;
    -webkit-animation: actionNameFadeOut 0.5s ease-in;
    animation: actionNameFadeOut 0.5s ease-in;
}

.action-reconfigure-status {
    font-size: small;
    font-weight: 500;
    right: 5px;
    position: absolute;
    top: 5px;
    opacity: 0.8;
    color: white;
    -moz-animation: updatingFadeIn 0.2s linear ;
    -o-animation: updatingFadeIn 0.2s linear ;
    -webkit-animation: updatingFadeIn 0.2s linear ;
    animation: updatingFadeIn 0.2s linear;
}

.action-menu {
    bottom: 5px;
    position: absolute;
    right: 5px;
    color: white;
}

.action-menu:hover {
    color: #bab7b7;
}

.action-header {
    padding-top: 15px;
    padding-right: 10px;
    background-color: #1eac48;
    margin-top: 0px;
    padding-bottom: 10px;
    border-bottom: 1px;
    /*FR-2739*/
    /*margin-bottom: 10px;*/
    text-align: center;
    position: relative;
}

div.action-header {
    border-top-left-radius: 10px !important;
    border-top-right-radius: 10px !important;
}
/* ... */

